--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -5,7 +5,6 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-
 name: Python Package CI/CD
 
 on:
@@ -30,11 +29,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+    - name: Install TA-Lib C library dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libta-lib-dev  # Install the TA-Lib C library
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Assuming project dependencies are listed here
-        pip install pytest  # Install pytest or any other test runner you use
+        pip install -r requirements.txt
+        pip install pytest  # Assuming pytest is used for running tests
+        pip install TA-Lib  # Ensure TA-Lib Python wrapper is installed
     - name: Run tests
       run: pytest tests/  # Run tests located in the tests/ directory
 
@@ -48,10 +52,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+    - name: Install TA-Lib C library dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libta-lib-dev  # Install the TA-Lib C library for deployment as well
     - name: Install build tools
       run: |
         python -m pip install --upgrade pip
         pip install build
+        pip install TA-Lib  # Ensure TA-Lib Python wrapper is installed for building the package
     - name: Build package
       run: python -m build
     - name: Publish package to PyPI
@@ -59,3 +68,4 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+
