--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,6 @@
-bokeh==3.3.4
-certifi==2024.2.2
-charset-normalizer==3.3.2
-contourpy==1.2.0
-docutils==0.20.1
-idna==3.6
-importlib_metadata==7.1.0
-iniconfig==2.0.0
-jaraco.classes==3.4.0
-jaraco.context==4.3.0
-jaraco.functools==4.0.0
-Jinja2==3.1.3
-joblib==1.3.2
-keyring==25.1.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-more-itertools==10.2.0
-nh3==0.2.17
-numpy==1.26.4
-packaging==24.0
-pandas==2.2.1
-pillow==10.2.0
-pkginfo==1.10.0
-plotly==5.20.0
-pluggy==1.4.0
-Pygments==2.17.2
-pytest==8.1.1
-python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.1
-readme_renderer==43.0
-requests==2.31.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.7.1
-scikit-learn==1.3.2
-scipy==1.12.0
-six==1.16.0
-TA-Lib==0.4.28
-tenacity==8.2.3
-threadpoolctl==3.3.0
-tornado==6.4
-tqdm==4.66.2
-twine==5.0.0
-tzdata==2024.1
-urllib3==2.2.1
-xyzservices==2023.10.1
-zipp==3.18.1
+pandas~=2.2.1
+scikit-learn~=1.3.2
+numpy~=1.26.4
+tqdm~=4.66.2
+joblib~=1.3.2
+TA-Lib~=0.4.0
