--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,8 +31,9 @@ jobs:
         python-version: '3.x'
     - name: Install TA-Lib C library dependencies
       run: |
+        sudo add-apt-repository universe
         sudo apt-get update
-        sudo apt-get install -y libta-lib-dev  # Install the TA-Lib C library
+        sudo apt-get install -y libta-lib-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
