--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,10 +30,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
-    - name: Install TA-Lib C library
+    - name: Install TA-Lib C library from source
       run: |
         sudo apt-get update
-        sudo apt-get install -y libta-lib-dev
+        sudo apt-get install -y build-essential wget
+        wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
+        tar -xzf ta-lib-0.4.0-src.tar.gz
+        cd ta-lib/
+        ./configure --prefix=/usr
+        make
+        sudo make install
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -52,10 +58,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
-    - name: Install TA-Lib C library
+    - name: Install TA-Lib C library from source
       run: |
         sudo apt-get update
-        sudo apt-get install -y libta-lib-dev
+        sudo apt-get install -y build-essential wget
+        wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz
+        tar -xzf ta-lib-0.4.0-src.tar.gz
+        cd ta-lib/
+        ./configure --prefix=/usr
+        make
+        sudo make install
     - name: Install build tools
       run: |
         python -m pip install --upgrade pip
