--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -73,7 +73,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install build
     - name: Build package
-      run: python -m build
+      run: |
+        pwd
+        ls -la
+        python -m build
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
