--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE
+include requirements.txt
 recursive-include backtesting-with-machine-learning *.md
 recursive-include backtesting-with-machine-learning/.gitbook *
 exclude backtesting-with-machine-learning/secrets.json
